--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </div>
   <div id="books">
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="main.js"></script>
   <script src="http://api.nytimes.com/svc/books/v3/lists/overview.jsonp?callback=getData&api-key=e73bc3306ae844a6ad0dcd00d197639b"></script>
 </body>
