--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="main.js"></script>
-  <script src="https://api.nytimes.com/svc/books/v3/lists/overview.jsonp?callback=getData&api-key=e73bc3306ae844a6ad0dcd00d197639b"></script>
+  <script src="https://api.nytimes.com/svc/books/v3/lists/overview.jsonp?callback=getData&api-key=" + apikey></script>
 </body>
 </html>
